double scroll bar fix

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -202,6 +202,7 @@ a.active{
 }
 .main-content{
   position: relative;
+  height: 2829px;
 }
 .content{
   position: relative;
@@ -228,7 +229,7 @@ spline-viewer{
 .about{
   padding-left: 40px;
   padding-top: 95px;
-  max-width: 725px;
+  max-width: 715px;
   transform: rotate(-3.747deg);
   p{
     font-size: x-large;
